force-app/main/default/objects/Opportunity/fields/AnalisiFunzionale__c.field-meta.xml
<CustomField>
    <fullName>AnalisiFunzionale__c</fullName>
    <formula>Development__c * AnalisiFunzionalePerc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Analisi Funzionale</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>