force-app/main/default/objects/Opportunity/fields/AnalisiFunzionaleCont__c.field-meta.xml
<CustomField>
    <fullName>AnalisiFunzionaleCont__c</fullName>
    <formula>AnalisiFunzionaleGar__c * (1 + Contingency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Analisi Funzionale + Cont</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>