force-app/main/default/objects/Opportunity/fields/AnalisiFunzionaleGar__c.field-meta.xml
<CustomField>
    <fullName>AnalisiFunzionaleGar__c</fullName>
    <formula>AnalisiFunzionale__c * (1 + Garanzia__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Analisi Funzionale + Gar</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>