force-app/main/default/objects/Opportunity/fields/AnalisiFunzionalePerc__c.field-meta.xml
<CustomField>
    <fullName>AnalisiFunzionalePerc__c</fullName>
    <label>Analisi Funzionale %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>