force-app/main/default/objects/Opportunity/fields/AnalisiTecnica__c.field-meta.xml
<CustomField>
    <fullName>AnalisiTecnica__c</fullName>
    <formula>Development__c * AnalisiTecnicaPerc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Analisi Tecnica</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>