force-app/main/default/objects/Opportunity/fields/AnalisiTecnicaCont__c.field-meta.xml
<CustomField>
    <fullName>AnalisiTecnicaCont__c</fullName>
    <formula>AnalisiTecnicaGar__c * (1 + Contingency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Analisi Tecnica + Cont</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>