force-app/main/default/objects/Opportunity/fields/AnalisiTecnicaGar__c.field-meta.xml
<CustomField>
    <fullName>AnalisiTecnicaGar__c</fullName>
    <formula>AnalisiTecnica__c * (1 + Garanzia__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Analisi Tecnica + Gar</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>