force-app/main/default/objects/Opportunity/fields/AnalisiTecnicaPerc__c.field-meta.xml
<CustomField>
    <fullName>AnalisiTecnicaPerc__c</fullName>
    <label>Analisi Tecnica %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>