force-app/main/default/objects/Opportunity/fields/Assessment__c.field-meta.xml
<CustomField>
    <fullName>Assessment__c</fullName>
    <formula>Development__c * AssessmentPerc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assessment</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>