force-app/main/default/objects/Opportunity/fields/AssessmentCont__c.field-meta.xml
<CustomField>
    <fullName>AssessmentCont__c</fullName>
    <formula>AssessmentGar__c * (1 + Contingency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assessment + Cont</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>