force-app/main/default/objects/Opportunity/fields/AssessmentGar__c.field-meta.xml
<CustomField>
    <fullName>AssessmentGar__c</fullName>
    <formula>Assessment__c * (1 + Garanzia__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assessment + Gar</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>