force-app/main/default/objects/Opportunity/fields/AssessmentPerc__c.field-meta.xml
<CustomField>
    <fullName>AssessmentPerc__c</fullName>
    <label>Assessment %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>