force-app/main/default/objects/Opportunity/fields/Contingency__c.field-meta.xml
<CustomField>
    <fullName>Contingency__c</fullName>
    <label>Contingency</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>