force-app/main/default/objects/Opportunity/fields/Costo__c.field-meta.xml
<CustomField>
    <fullName>Costo__c</fullName>
    <formula>TotaleEffort__c * CostoMedio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Costo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>