force-app/main/default/objects/Opportunity/fields/CostoCont__c.field-meta.xml
<CustomField>
    <fullName>CostoCont__c</fullName>
    <formula>TotaleEffortCont__c * CostoMedio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Costo + Cont</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>