force-app/main/default/objects/Opportunity/fields/CostoGar__c.field-meta.xml
<CustomField>
    <fullName>CostoGar__c</fullName>
    <formula>TotaleEffortGar__c * CostoMedio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Costo + Gar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>