force-app/main/default/objects/Opportunity/fields/CostoMedio__c.field-meta.xml
<CustomField>
    <fullName>CostoMedio__c</fullName>
    <label>Costo medio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>