force-app/main/default/objects/Opportunity/fields/CR__c.field-meta.xml
<CustomField>
    <fullName>CR__c</fullName>
    <formula>CostoMedio__c / RateVendita__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>C/R</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>