force-app/main/default/objects/Opportunity/fields/Deploy__c.field-meta.xml
<CustomField>
    <fullName>Deploy__c</fullName>
    <formula>Development__c * DeployPerc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deploy</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>