force-app/main/default/objects/Opportunity/fields/DeployCont__c.field-meta.xml
<CustomField>
    <fullName>DeployCont__c</fullName>
    <formula>DeployGar__c * (1 + Contingency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deploy + Cont</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>