force-app/main/default/objects/Opportunity/fields/DeployGar__c.field-meta.xml
<CustomField>
    <fullName>DeployGar__c</fullName>
    <formula>Deploy__c * (1 + Garanzia__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deploy + Gar</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>