force-app/main/default/objects/Opportunity/fields/DeployPerc__c.field-meta.xml
<CustomField>
    <fullName>DeployPerc__c</fullName>
    <label>Deploy %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>