force-app/main/default/objects/Opportunity/fields/DesignEndDate__c.field-meta.xml
<CustomField>
    <fullName>DesignEndDate__c</fullName>
    <label>Design End Date</label>
    <type>Date</type>
</CustomField>