force-app/main/default/objects/Opportunity/fields/DesignStartDate__c.field-meta.xml
<CustomField>
    <fullName>DesignStartDate__c</fullName>
    <label>Design Start Date</label>
    <type>Date</type>
</CustomField>