force-app/main/default/objects/Opportunity/fields/Development__c.field-meta.xml
<CustomField>
    <fullName>Development__c</fullName>
    <formula>TotaleSviluppiSalesforce__c + TotaleSviluppiMulesoft__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Development</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>