force-app/main/default/objects/Opportunity/fields/DevelopmentCont__c.field-meta.xml
<CustomField>
    <fullName>DevelopmentCont__c</fullName>
    <formula>DevelopmentGar__c * (1 + Contingency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Development + Cont</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>