force-app/main/default/objects/Opportunity/fields/DevelopmentGar__c.field-meta.xml
<CustomField>
    <fullName>DevelopmentGar__c</fullName>
    <formula>Development__c * (1 + Garanzia__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Development + Gar</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>