force-app/main/default/objects/Opportunity/fields/EffortEquivalente__c.field-meta.xml
<CustomField>
    <fullName>EffortEquivalente__c</fullName>
    <formula>VenditaTrattativa__c / RateVendita__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effort equivalente</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>