force-app/main/default/objects/Opportunity/fields/Garanzia__c.field-meta.xml
<CustomField>
    <fullName>Garanzia__c</fullName>
    <label>Garanzia</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>