force-app/main/default/objects/Opportunity/fields/ImplementationEndDate__c.field-meta.xml
<CustomField>
    <fullName>ImplementationEndDate__c</fullName>
    <label>Implementation End Date</label>
    <type>Date</type>
</CustomField>