force-app/main/default/objects/Opportunity/fields/ImplementationStartDate__c.field-meta.xml
<CustomField>
    <fullName>ImplementationStartDate__c</fullName>
    <label>Implementation Start Date</label>
    <type>Date</type>
</CustomField>