force-app/main/default/objects/Opportunity/fields/Margine__c.field-meta.xml
<CustomField>
    <fullName>Margine__c</fullName>
    <formula>1 - CR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margine</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>