force-app/main/default/objects/Opportunity/fields/Migrazione__c.field-meta.xml
<CustomField>
    <fullName>Migrazione__c</fullName>
    <formula>Development__c * MigrazionePerc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Migrazione</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>