force-app/main/default/objects/Opportunity/fields/MigrazioneCont__c.field-meta.xml
<CustomField>
    <fullName>MigrazioneCont__c</fullName>
    <formula>MigrazioneGar__c * (1 + Contingency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Migrazione + Cont</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>