force-app/main/default/objects/Opportunity/fields/MigrazioneGar__c.field-meta.xml
<CustomField>
    <fullName>MigrazioneGar__c</fullName>
    <formula>Migrazione__c * (1 + Garanzia__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Migrazione + Gar</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>