force-app/main/default/objects/Opportunity/fields/MigrazionePerc__c.field-meta.xml
<CustomField>
    <fullName>MigrazionePerc__c</fullName>
    <label>Migrazione %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>