force-app/main/default/objects/Opportunity/fields/OpportunityCode__c.field-meta.xml
<CustomField>
    <fullName>OpportunityCode__c</fullName>
    <label>Opportunity Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>