force-app/main/default/objects/Opportunity/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <formula>CASE(StageName,
&apos;Idea&apos;, &apos;Customer&apos;,
&apos;Evaluation&apos;, &apos;Lutech&apos;,
&apos;Approval&apos;, &apos;Customer&apos;,
&apos;Planning&apos;, &apos;Lutech&apos;,
&apos;Not Started&apos;, &apos;Lutech&apos;,
&apos;In Progress&apos;, &apos;Lutech&apos;,
&apos;Under Review&apos;, &apos;Customer&apos;,
&apos;Completed&apos;, &apos;-&apos;,
&apos;On Hold&apos;, &apos;-&apos;,
&apos;Cancelled&apos;, &apos;-&apos;,
&apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ownership</label>
    <type>Text</type>
</CustomField>