force-app/main/default/objects/Opportunity/fields/Ownership_icon__c.field-meta.xml
<CustomField>
    <fullName>Ownership_icon__c</fullName>
    <formula>CASE(Ownership__c,
&apos;Customer&apos;, IMAGE(&apos;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=068d2000002wxbF&amp;operationContext=CHATTER&amp;contentId=05Td2000003SvG9&apos;, &apos;customer&apos;, 20, 20),
&apos;Lutech&apos;, IMAGE(&apos;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=068d2000002wwos&amp;operationContext=CHATTER&amp;contentId=05Td2000003Ss3m&apos;, &apos;lutech&apos;, 20, 30),
&apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ownership</label>
    <type>Text</type>
</CustomField>