force-app/main/default/objects/Opportunity/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <formula>CASE(StageName,
&apos;Idea&apos;, &apos;Design&apos;,
&apos;Evaluation&apos;, &apos;Design&apos;,
&apos;Approval&apos;, &apos;Design&apos;,
&apos;Planning&apos;, &apos;Design&apos;,
&apos;Not Started&apos;, &apos;Implementation&apos;,
&apos;In Progress&apos;, &apos;Implementation&apos;,
&apos;Under Review&apos;, &apos;Implementation&apos;,
&apos;Completed&apos;, &apos;Completed&apos;,
&apos;On Hold&apos;, &apos;On Hold&apos;,
&apos;Cancelled&apos;, &apos;Cancelled&apos;,
&apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phase</label>
    <type>Text</type>
</CustomField>