force-app/main/default/objects/Opportunity/fields/Platform_icon__c.field-meta.xml
<CustomField>
    <fullName>Platform_icon__c</fullName>
    <formula>IF(INCLUDES(Platform__c,&apos;Salesforce&apos;),
IMAGE(&apos;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=068d2000002wyqf&amp;operationContext=CHATTER&amp;contentId=05Td2000003Spic&apos;, &apos;salesforce&apos;, 20, 28), &apos;&apos;) &amp; 
IF(AND(INCLUDES(Platform__c,&apos;Salesforce&apos;), INCLUDES(Platform__c,&apos;Mulesoft&apos;)), &apos; / &apos;, &apos;&apos;) &amp; 
IF(INCLUDES(Platform__c,&apos;Mulesoft&apos;), IMAGE(&apos;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=068d2000002wyp3&amp;operationContext=CHATTER&amp;contentId=05Td2000003SwVZ&apos;, &apos;mulesoft&apos;, 20, 20), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Platform</label>
    <type>Text</type>
</CustomField>