force-app/main/default/objects/Opportunity/fields/PM__c.field-meta.xml
<CustomField>
    <fullName>PM__c</fullName>
    <formula>Development__c * PMPerc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PM</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>