force-app/main/default/objects/Opportunity/fields/PMCont__c.field-meta.xml
<CustomField>
    <fullName>PMCont__c</fullName>
    <formula>PMGar__c * (1 + Contingency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PM + Cont</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>