force-app/main/default/objects/Opportunity/fields/PMGar__c.field-meta.xml
<CustomField>
    <fullName>PMGar__c</fullName>
    <formula>PM__c * (1 + Garanzia__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PM + Gar</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>