force-app/main/default/objects/Opportunity/fields/PMPerc__c.field-meta.xml
<CustomField>
    <fullName>PMPerc__c</fullName>
    <label>PM %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>