force-app/main/default/objects/Opportunity/fields/Priority_icon__c.field-meta.xml
<CustomField>
    <fullName>Priority_icon__c</fullName>
    <formula>CASE(Priority__c,
&apos;Critical&apos;, IMAGE(&apos;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=068d2000002wwld&amp;operationContext=CHATTER&amp;contentId=05Td2000003SuGr&apos;, &apos;critical&apos;, 20, 20),
&apos;High&apos;, IMAGE(&apos;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=068d2000002wrq5&amp;operationContext=CHATTER&amp;contentId=05Td2000003StSs&apos;, &apos;high&apos;, 20, 20),
&apos;Medium&apos;, IMAGE(&apos;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=068d2000002wy7V&amp;operationContext=CHATTER&amp;contentId=05Td2000003Smos&apos;, &apos;medium&apos;, 20, 20),
&apos;Low&apos;, IMAGE(&apos;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=068d2000002wwnF&amp;operationContext=CHATTER&amp;contentId=05Td2000003SuIT&apos;, &apos;low&apos;, 20, 20),
&apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority</label>
    <type>Text</type>
</CustomField>