force-app/main/default/objects/Opportunity/fields/Prototipi__c.field-meta.xml
<CustomField>
    <fullName>Prototipi__c</fullName>
    <formula>Development__c * PrototipiPerc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prototipi</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>