force-app/main/default/objects/Opportunity/fields/PrototipiCont__c.field-meta.xml
<CustomField>
    <fullName>PrototipiCont__c</fullName>
    <formula>PrototipiGar__c * (1 + Contingency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prototipi + Cont</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>