force-app/main/default/objects/Opportunity/fields/PrototipiGar__c.field-meta.xml
<CustomField>
    <fullName>PrototipiGar__c</fullName>
    <formula>Prototipi__c * (1 + Garanzia__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prototipi + Gar</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>