force-app/main/default/objects/Opportunity/fields/PrototipiPerc__c.field-meta.xml
<CustomField>
    <fullName>PrototipiPerc__c</fullName>
    <label>Prototipi %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>