force-app/main/default/objects/Opportunity/fields/QUGTraining__c.field-meta.xml
<CustomField>
    <fullName>QUGTraining__c</fullName>
    <formula>Development__c * QUGTrainingPerc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QUG/Training</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>