force-app/main/default/objects/Opportunity/fields/QUGTrainingCont__c.field-meta.xml
<CustomField>
    <fullName>QUGTrainingCont__c</fullName>
    <formula>QUGTrainingGar__c * (1 + Contingency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QUG/Training + Cont</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>