force-app/main/default/objects/Opportunity/fields/QUGTrainingGar__c.field-meta.xml
<CustomField>
    <fullName>QUGTrainingGar__c</fullName>
    <formula>QUGTraining__c * (1 + Garanzia__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QUG/Training + Gar</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>