force-app/main/default/objects/Opportunity/fields/QUGTrainingPerc__c.field-meta.xml
<CustomField>
    <fullName>QUGTrainingPerc__c</fullName>
    <label>QUG/Training %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>