force-app/main/default/objects/Opportunity/fields/RateVendita__c.field-meta.xml
<CustomField>
    <fullName>RateVendita__c</fullName>
    <label>Rate vendita</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>