force-app/main/default/objects/Opportunity/fields/Rollout__c.field-meta.xml
<CustomField>
    <fullName>Rollout__c</fullName>
    <formula>Development__c * RolloutPerc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rollout</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>