force-app/main/default/objects/Opportunity/fields/RolloutCont__c.field-meta.xml
<CustomField>
    <fullName>RolloutCont__c</fullName>
    <formula>RolloutGar__c * (1 + Contingency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rollout + Cont</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>