force-app/main/default/objects/Opportunity/fields/RolloutGar__c.field-meta.xml
<CustomField>
    <fullName>RolloutGar__c</fullName>
    <formula>Rollout__c * (1 + Garanzia__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rollout + Gar</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>