force-app/main/default/objects/Opportunity/fields/RolloutPerc__c.field-meta.xml
<CustomField>
    <fullName>RolloutPerc__c</fullName>
    <label>Rollout %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>