force-app/main/default/objects/Opportunity/fields/SupportoPostDeploy__c.field-meta.xml
<CustomField>
    <fullName>SupportoPostDeploy__c</fullName>
    <formula>Development__c * SupportoPostDeployPerc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supporto Post-Deploy</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>