force-app/main/default/objects/Opportunity/fields/SupportoPostDeployCont__c.field-meta.xml
<CustomField>
    <fullName>SupportoPostDeployCont__c</fullName>
    <formula>SupportoPostDeployGar__c * (1 + Contingency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supporto Post-Deploy + Cont</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>