force-app/main/default/objects/Opportunity/fields/SupportoPostDeployGar__c.field-meta.xml
<CustomField>
    <fullName>SupportoPostDeployGar__c</fullName>
    <formula>SupportoPostDeploy__c * (1 + Garanzia__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supporto Post-Deploy + Gar</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>