force-app/main/default/objects/Opportunity/fields/SupportoPostDeployPerc__c.field-meta.xml
<CustomField>
    <fullName>SupportoPostDeployPerc__c</fullName>
    <label>Supporto Post-Deploy %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>