force-app/main/default/objects/Opportunity/fields/TestBF__c.field-meta.xml
<CustomField>
    <fullName>TestBF__c</fullName>
    <formula>Development__c * TestBFPerc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test + BF</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>