force-app/main/default/objects/Opportunity/fields/TestBFCont__c.field-meta.xml
<CustomField>
    <fullName>TestBFCont__c</fullName>
    <formula>TestBFGar__c * (1 + Contingency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test + BF + Cont</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>