force-app/main/default/objects/Opportunity/fields/TestBFGar__c.field-meta.xml
<CustomField>
    <fullName>TestBFGar__c</fullName>
    <formula>TestBF__c * (1 + Garanzia__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test + BF + Gar</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>