force-app/main/default/objects/Opportunity/fields/TestBFPerc__c.field-meta.xml
<CustomField>
    <fullName>TestBFPerc__c</fullName>
    <label>Test + BF %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>