force-app/main/default/objects/Opportunity/fields/TestingEndDate__c.field-meta.xml
<CustomField>
    <fullName>TestingEndDate__c</fullName>
    <label>Testing End Date</label>
    <type>Date</type>
</CustomField>