force-app/main/default/objects/Opportunity/fields/TestingStartDate__c.field-meta.xml
<CustomField>
    <fullName>TestingStartDate__c</fullName>
    <label>Testing Start Date</label>
    <type>Date</type>
</CustomField>