force-app/main/default/objects/Opportunity/fields/TotaleEffort__c.field-meta.xml
<CustomField>
    <fullName>TotaleEffort__c</fullName>
    <formula>PM__c + Assessment__c + AnalisiFunzionale__c + AnalisiTecnica__c + Development__c + Prototipi__c + TestBF__c + UAT__c + Deploy__c + Rollout__c + Migrazione__c + QUGTraining__c + SupportoPostDeploy__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Totale effort</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>