force-app/main/default/objects/Opportunity/fields/TotaleEffortCont__c.field-meta.xml
<CustomField>
    <fullName>TotaleEffortCont__c</fullName>
    <formula>PMCont__c + AssessmentCont__c + AnalisiFunzionaleCont__c + AnalisiTecnicaCont__c + DevelopmentCont__c + PrototipiCont__c + TestBFCont__c + UATCont__c + DeployCont__c + RolloutCont__c + MigrazioneCont__c + QUGTrainingCont__c + SupportoPostDeployCont__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Totale effort + Cont</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>