force-app/main/default/objects/Opportunity/fields/TotaleEffortGar__c.field-meta.xml
<CustomField>
    <fullName>TotaleEffortGar__c</fullName>
    <formula>PMGar__c + AssessmentGar__c + AnalisiFunzionaleGar__c + AnalisiTecnicaGar__c + DevelopmentGar__c + PrototipiGar__c + TestBFGar__c + UATGar__c + DeployGar__c + RolloutGar__c + MigrazioneGar__c + QUGTrainingGar__c + SupportoPostDeployGar__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Totale effort + Gar</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>