force-app/main/default/objects/Opportunity/fields/TotaleSviluppiSalesforce__c.field-meta.xml
<CustomField>
    <fullName>TotaleSviluppiSalesforce__c</fullName>
    <label>Totale sviluppi Salesforce</label>
    <summarizedField>DriverValutazione__c.Stima__c</summarizedField>
    <summaryFilterItems>
        <field>DriverValutazione__c.Platform__c</field>
        <operation>equals</operation>
        <value>Salesforce</value>
    </summaryFilterItems>
    <summaryForeignKey>DriverValutazione__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>