force-app/main/default/objects/Opportunity/fields/Trattativa__c.field-meta.xml
<CustomField>
    <fullName>Trattativa__c</fullName>
    <label>Trattativa %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>