force-app/main/default/objects/Opportunity/fields/UAT__c.field-meta.xml
<CustomField>
    <fullName>UAT__c</fullName>
    <formula>Development__c * UATPerc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UAT</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>