force-app/main/default/objects/Opportunity/fields/UATCont__c.field-meta.xml
<CustomField>
    <fullName>UATCont__c</fullName>
    <formula>UATGar__c * (1 + Contingency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UAT + Cont</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>