force-app/main/default/objects/Opportunity/fields/UATGar__c.field-meta.xml
<CustomField>
    <fullName>UATGar__c</fullName>
    <formula>UAT__c * (1 + Garanzia__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UAT + Gar</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>