force-app/main/default/objects/Opportunity/fields/UATPerc__c.field-meta.xml
<CustomField>
    <fullName>UATPerc__c</fullName>
    <label>UAT %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>