force-app/main/default/objects/Opportunity/fields/Vendita__c.field-meta.xml
<CustomField>
    <fullName>Vendita__c</fullName>
    <formula>CostoCont__c / CR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendita</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>