force-app/main/default/objects/Opportunity/fields/VenditaTrattativa__c.field-meta.xml
<CustomField>
    <fullName>VenditaTrattativa__c</fullName>
    <formula>Vendita__c * (1 + Trattativa__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendita + Trattativa</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>